updated the links

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   </header>
 
   <main class="cards">
-    <a class="card" href="grammar.html">
+    <a class="card" href="/grammar.html">
       <h2>Grammar Tools</h2>
       <p>Left Recursion, Left Factoring, FIRST, FOLLOW, LL(1) Table</p>
     </a>
-    <a class="card" href="cpp.html">
+    <a class="card" href="/cpp.html">
       <h2>C/C++ Tools</h2>
       <p>Lexical Analysis and Parse Tree (LL(1) subset)</p>
     </a>
-    <a class="card" href="string.html">
+    <a class="card" href="/string.html">
       <h2>String Operations</h2>
       <p>Length/whitespace/lines, comments, articles, identifiers/keywords, prepositions, regex test</p>
     </a>
