--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </main>
 
   <footer>
-    <a href="https://github.com/MarufurRahmanRahat/syngen-grammar-analyzer" target="_blank" rel="noreferrer"> Visit Repository</a>
+    <a href="https://github.com/" target="_blank" rel="noreferrer">Docs</a>
   </footer>
 </body>
 </html>
