--- a/grammar.html
+++ b/grammar.html
@@ -28,7 +28,7 @@ T -> F T'
 T' -> * F T' | ε
 F -> ( E ) | id"></textarea>
     <div class="actions">
-      <button id="btnRun">Run</button>
+      <!-- <button id="btnRun">Run</button> -->
     </div>
     <div id="outputArea" class="output"></div>
   </main>
